fix select text not centered on iOS

--- a/quizzical/index.css
+++ b/quizzical/index.css
@@ -79,6 +79,7 @@ select {
   width: 200px;
   height: 50px;
   text-align: center;
+  text-align-last: center; /* works for iOS */
 
   -webkit-appearance: none;
   -moz-appearance: none;
